// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Отображение  Catalog Выводится короткая информация о товарах 1`] = `
<div
  class="col-12 col-sm-6 col-md-4 col-lg-3"
  data-testid="1"
>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="1"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        Pants
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        34
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/1"
      >
        Details
      </a>
    </div>
  </div>
</div>
`;

exports[`Отображение  Catalog Выводится короткая информация о товарах 2`] = `
<div
  class="col-12 col-sm-6 col-md-4 col-lg-3"
  data-testid="2"
>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="2"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        Chair
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        2344
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/2"
      >
        Details
      </a>
    </div>
  </div>
</div>
`;
